--- a/assets/sass/main/_base.scss
+++ b/assets/sass/main/_base.scss
@@ -37,7 +37,6 @@ body {
 img {
 	max-width: 100%;
 	height: auto;
-	font-size: 0;
 	line-height: 0;
 	vertical-align: bottom;
 	border: none;
