--- a/assets/sass/main/_blocks.scss
+++ b/assets/sass/main/_blocks.scss
@@ -244,7 +244,7 @@
 
 	.wp-caption {
 
-		a {
+		> a {
 
 			@include nm-image-link;
 		}
